--- a/www/index.html
+++ b/www/index.html
@@ -96,10 +96,9 @@
 	<script type="text/javascript">
 
 		window.onload = function(){
-			FMEServer.init({
-				server : "https://fmepedia2014-safe-software.fmecloud.com",
-    			token : "fb1c3ee6828e6814c75512dd4770a02e73d913b8"
-			});
+      $.getJSON("http://demos.fmeserver.com.s3.amazonaws.com/server-demo-config.json", function(config) {
+        FMEServer.init(config.initObject);
+      });
 		};
 
 		function processRequest(){
